# sistema-seu

./: .sdkmanrc  README.md
diario-classe-v1/: .gitignore  Dockerfile  README.md  pom.xml  pyproject.toml
diario-classe-v1/docs/: RESUMO.txt  estrutura.dbml  requisitos.md
diario-classe-v1/src/main/java/zip/fediverso/seu/diario_classe_v1/: DiarioClasseV1Application.java  package-info.java
diario-classe-v1/src/main/java/zip/fediverso/seu/diario_classe_v1/controlador/: AlunoController.java  PageController.java
diario-classe-v1/src/main/java/zip/fediverso/seu/diario_classe_v1/dominio/: Aluno.java  Avaliacao.java  Diario.java  Encontro.java  Frequencia.java  Vinculo.java  package-info.java
diario-classe-v1/src/main/java/zip/fediverso/seu/diario_classe_v1/modelos/: Aluno.java  Avaliacao.java  Diario.java  Encontro.java  Frequencia.java  Inscricao.java  Presenca.java  Vinculo.java
diario-classe-v1/src/main/resources/: application-prod.properties  application.properties  overview.html
diario-classe-v1/src/main/resources/static/css/: estilos.css
diario-classe-v1/src/main/resources/static/js/: scripts.js
diario-classe-v1/src/main/resources/templates/: base.html  index.html
diario-classe-v1/src/main/resources/templates/fragments/: foot.html  head.html  header.html
diario-classe-v1/src/main/resources/templates/negocio/alunos/: ativos.html  detalhes.html  formulario.html  lista.html
diario-classe-v1/src/test/java/zip/fediverso/seu/diario_classe_v1/: DiarioClasseV1ApplicationTests.java
diario-classe-v1/src/test/resources/: application-test.properties
(+59 files in other folders)
