[tool.poetry]
name = "diario-classe-v1"
version = "0.1.0"
description = ""
authors = ["Eduardo N.S.R. <vndmtrx@duck.com>"]
readme = "README.md"
packages = [{include = "diario_classe_v1"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
